--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,7 +11,7 @@
   --cmd-font: "Fixedsys", monospace;
 }
 
-body {
+.body {
   height: 100vh;
   width: 100vw;
   font-family: var(--default-font);
