--- a/src/components/IconsComponents/AboutMe/AboutMe.module.scss
+++ b/src/components/IconsComponents/AboutMe/AboutMe.module.scss
@@ -1,7 +1,7 @@
 .mainAboutMe {
   width: 100%;
   height: 100vh;
-  padding: 1rem 0.5rem;
+  padding: 2rem 0.5rem;
   text-align: justify;
   background-color: var(--white);
   color: var(--black);
@@ -28,4 +28,20 @@
 .aboutMeP {
   padding-top: 1rem;
   line-height: 1.5rem;
+}
+
+@media (max-width: 47rem) {
+  .mainAboutMe {
+    padding: 1rem 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .hr {
+    margin-top: 0.5rem;
+  }
+
+  .aboutMeP {
+    padding-top: 0.5rem;
+    line-height: 1.3rem;
+  }
 }
